--- a/index.html
+++ b/index.html
@@ -14,6 +14,54 @@
 
     </head>
     <body>
-        <h1>My simple app</h1>
+        <!-- поле ввода первого числа -->
+	<input id="num1" />
+
+	<!-- блок с кнопками -->
+	<!-- блок с кнопками -->
+<div id="operator_btns">
+  <button id="plus" onclick="op='+'">+</button>
+  <button id="minus" onclick="op='-'">-</button>
+  <button id="times" onclick="op='*'">x</button>
+  <button id="divide" onclick="op='/'">:</button>
+</div>
+
+<script>
+  // переменная, в которой хранится выбранное математическое действие
+  var op; 
+
+  // функция расчёта
+  function func() {
+  	// переменная для результата
+    var result;
+    // получаем первое и второе число
+    var num1 = Number(document.getElementById("num1").value);
+    var num2 = Number(document.getElementById("num2").value);
+    // смотрим, что было в переменной с действием, и действуем исходя из этого
+    switch (op) {
+      case '+':
+        result = num1 + num2;
+        break;
+      case '-':
+        result = num1 - num2;
+        break;
+      case '*':
+        result = num1 * num2;
+        break;
+      case '/':
+        result = num1 / num2;
+        break;
+    }
+	document.getElementById("result").innerHTML = result;
+
+  }
+</script>
+	<!-- поле ввода второго числа -->
+	<input id="num2" />
+	<br>
+
+	<!-- кнопка для рассчётов -->
+	<button onclick="func()">Посчитать</button>
+	<p id="result"></p>
     </body>
 </html>
