--- a/index.html
+++ b/index.html
@@ -14,54 +14,8 @@
 
     </head>
     <body>
-        <!-- поле ввода первого числа -->
-	<input id="num1" />
+<div><a href="https://planetcalc.com/8325/" data-lang="ru" data-code="" data-colors="#263238,#435863,#090c0d,#fa7014,#fb9b5a,#c25004" data-v="4170">PLANETCALC, Вычисления по модулю</a><script src="https://embed.planetcalc.com/widget.js?v=4170"></script></div>
+<div><a href="https://planetcalc.com/3312/" data-lang="ru" data-code="" data-colors="#263238,#435863,#090c0d,#fa7014,#fb9b5a,#c25004" data-v="4170">PLANETCALC, Обратный элемент в кольце по модулю</a><script src="https://embed.planetcalc.com/widget.js?v=4170"></script></div>
 
-	<!-- блок с кнопками -->
-	<!-- блок с кнопками -->
-<div id="operator_btns">
-  <button id="plus" onclick="op='+'">+</button>
-  <button id="minus" onclick="op='-'">-</button>
-  <button id="times" onclick="op='*'">x</button>
-  <button id="divide" onclick="op='/'">:</button>
-</div>
-
-<script>
-  // переменная, в которой хранится выбранное математическое действие
-  var op; 
-
-  // функция расчёта
-  function func() {
-  	// переменная для результата
-    var result;
-    // получаем первое и второе число
-    var num1 = Number(document.getElementById("num1").value);
-    var num2 = Number(document.getElementById("num2").value);
-    // смотрим, что было в переменной с действием, и действуем исходя из этого
-    switch (op) {
-      case '+':
-        result = num1 + num2;
-        break;
-      case '-':
-        result = num1 - num2;
-        break;
-      case '*':
-        result = num1 * num2;
-        break;
-      case '/':
-        result = num1 / num2;
-        break;
-    }
-	document.getElementById("result").innerHTML = result;
-
-  }
-</script>
-	<!-- поле ввода второго числа -->
-	<input id="num2" />
-	<br>
-
-	<!-- кнопка для рассчётов -->
-	<button onclick="func()">Посчитать</button>
-	<p id="result"></p>
     </body>
 </html>
